Fix funny spacing when paragraphs are used in board member bios

--- a/assets/sass/_page-about.scss
+++ b/assets/sass/_page-about.scss
@@ -68,6 +68,11 @@
 				padding: 0.5rem;
 				background: white;
 			}
+
+			.container {
+				background: white;
+				margin: 1rem 1rem;
+			}
 		}
 	}
 
